chassis/build/log/idf_py_stderr_output_1815677
In file included from /home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/softap_sta.c:14:
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/include/softap_sta.h:4:1: error: unknown type name 'uint8_t'
    4 | uint8_t softap_sta_config(void);
      | ^~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/include/softap_sta.h:1:1: note: 'uint8_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
  +++ |+#include <stdint.h>
    1 | #ifndef __SOFTAP_STA_H__
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/softap_sta.c:265:9: error: conflicting types for 'softap_sta_config'; have 'uint8_t(void)' {aka 'unsigned char(void)'}
  265 | uint8_t softap_sta_config(void)
      |         ^~~~~~~~~~~~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/components/softap_sta/include/softap_sta.h:4:9: note: previous declaration of 'softap_sta_config' with type 'int(void)'
    4 | uint8_t softap_sta_config(void);
      |         ^~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/build.make:76：esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/softap_sta.c.obj] 错误 1
make[1]: *** [CMakeFiles/Makefile2:5089：esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/all] 错误 2
make: *** [Makefile:136：all] 错误 2
